force-app/main/default/objects/Terminal_Issues__c/Terminal_Issues__c.object-meta.xml
<CustomObject>
    <description>form to list all terminal/TMS descriptions</description>
    <label>Terminal Issue</label>
    <nameField>
        <label>Terminal Issues Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Terminal Issues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>