force-app/main/default/objects/Terminal_Issues__c/fields/Date_of_Issue__c.field-meta.xml
<CustomField>
    <fullName>Date_of_Issue__c</fullName>
    <label>Date of Issue</label>
    <type>DateTime</type>
</CustomField>