force-app/main/default/objects/Terminal_Issues__c/fields/Terminal__c.field-meta.xml
<CustomField>
    <fullName>Terminal__c</fullName>
    <label>Terminal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Sea Warren</fullName>
            </value>
            <value>
                <fullName>Terminal 2</fullName>
            </value>
            <value>
                <fullName>Terminal 3</fullName>
            </value>
            <value>
                <fullName>Terminal 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>