force-app/main/default/objects/Terminal_Issues__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <description>user reporting issue</description>
    <label>User</label>
    <type>TextArea</type>
</CustomField>